--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,33 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Run my tests
 
 on:
   push:
     branches: "lab_doc_409863" 
 
 jobs:
-  run-tests:
-
-    runs-on: [ubuntu-latest, windows-latest]
+  test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest] 
+        
+    runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+      
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+        
+    - name: Install dependencies
+      run:
+        python -m pip install --upgrade pip
+        
     - name: Test with SquareTests
       run: |
         python -m unittest SquareTests.py
